<resources>
    <!-- string for the texts -->
    <string name="app_name">JayPatel_Score</string>
    <string name="cricket_team_1">Cricket Team 1</string>
    <string name="cricket_team_2">Cricket Team 2 </string>
    <string name="inc">Inc</string>
    <string name="team_1_name">Team 1 Name</string>
    <string name="team_2_name">Team 2 Name</string>
    <string name="score_1"> 1</string>
    <string name="score_2"> 2</string>
    <string name="score_3"> 3</string>
    <string name="score_4"> 4</string>
    <string name="score_6"> 6</string>
    <string name="score_values"> Score Values</string>
    <string name="total_score_team_2">0</string>
    <string name="total_score_team_1">0</string>
</resources>