<?xml version="1.0" encoding="utf-8"?>
<!-- Jay Patel A00254220 -->
<!-- Viren Moliya A00254404 -->
<!-- Ruchit Patel A00254708 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Team 1 Layout -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:text="@string/cricket_team_1"
                    android:textColor="#92B"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="36dp"
                    style="@style/TextView"/>

                <!-- Team 1 Layout to write name -->
                <EditText
                        android:layout_width="209dp"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:hint="@string/team_1_name"
                        android:textColor="#7F52FF"
                        style="@style/EditText"/><!-- Just for this assignment Lab Views and Layout -->

                <!-- Team 1 increase button -->
                <Button
                    android:id="@+id/inc_button_team_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:icon="@drawable/ic_baseline_add_24"
                    app:iconGravity="textStart"
                    app:iconPadding="-3dp"/>

                <!-- Team 1 score text -->
                <TextView
                    android:id="@+id/Team_1_Score"
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:text="@string/total_score_team_1"
                    android:textColor="#FFA500"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="36dp"
                    style="@style/TextView"/>

                <!-- Team 1 decrease button -->
                <Button
                    android:id="@+id/dec_button_team_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:icon="@drawable/ic_baseline_remove_24"
                    android:gravity="center"
                    app:iconGravity="textStart"
                    app:iconPadding="-3dp"/>

            </LinearLayout>

            <!-- Team 2 Layout -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:text="@string/cricket_team_2"
                    android:textColor="#92B"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="289dp"
                    tools:layout_editor_absoluteY="47dp"
                    style="@style/TextView"/>

            <!-- Team 2 Layout to write name -->
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:hint="@string/team_2_name"
                        android:textColor="#A4C639"
                        style="@style/EditText"/><!-- Just for this assignment Lab Views and Layout -->

                <!-- Team 2 increase button -->
                <Button
                    android:id="@+id/inc_button_team_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:icon="@drawable/ic_baseline_add_24"
                    app:iconGravity="textStart"
                    app:iconPadding="-3dp"/>

                <!-- Team 2 score text -->
                <TextView
                    android:id="@+id/Team_2_Score"
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:layout_gravity="center"
                    android:text="@string/total_score_team_2"
                    android:textColor="#FFA500"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="36dp"
                    style="@style/TextView"/>

                <!-- Team 2 decrease button -->
                <Button
                    android:id="@+id/dec_button_team_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:icon="@drawable/ic_baseline_remove_24"
                    app:iconGravity="textStart"
                    app:iconPadding="-3dp"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Score values 1, 2, 3, 4, 5 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="4">

            <RadioGroup
                android:id="@+id/diff_values"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:checkedButton="@id/score_1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/score_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_1" />

                <RadioButton
                    android:id="@+id/score_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_2" />

                <RadioButton
                    android:id="@+id/score_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_3" />

                <RadioButton
                    android:id="@+id/score_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_4" />

                <RadioButton
                    android:id="@+id/score_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_6" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="2"
            android:text="@string/score_values"
            android:gravity="center"
            android:textColor="#E24462"
            android:textSize="25dp" />

        <Switch
            android:id="@+id/darkmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingTop="30dp"
            android:text="Night mode"
            android:textSize="20dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
</ScrollView>